# proxy-wasm-hello-world

./: Cargo.toml  Makefile  README.md  proxy_wasm_hello_world.wasm
src/: filter.rs  soaptojson.rs
